# dfflow

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
dfflow/: __init__.py
dfflow/core/: branch.py  exceptions.py  pipeline.py  step.py
dfflow/decorators/: step_decorator.py
dfflow/diff/: dataframe_diff.py  observability_formatter.py
dfflow/logging/: logger.py
dfflow/profiling/: profiler.py
dfflow/steps/: cleaning.py
dfflow/utils/: hashing.py
dfflow/viz/: pipeline_viz.py
examples/: 01_basic_pipeline.py  02_logging.py  03_branching.py  04_observability.py  05_sales_report.py
tests/: test_branch.py  test_cleaning.py  test_decorator.py  test_diff.py  test_hashing.py  test_logger.py  test_observability_formatter.py  test_pipeline.py  test_profiler.py  test_viz.py
